--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@headlessui/vue": "^1.7.22",
+        "@heroicons/vue": "^2.1.3",
+        "@tailwindcss/forms": "^0.5.7",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
