--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
-        "flowbite": "^2.3.0"
+        "flowbite": "^2.3.0",
+        "vue3-toastify": "^0.2.2"
     }
 }
