--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "flowbite": "^2.3.0",
+        "sweetalert2": "^11.15.10",
         "vue3-toastify": "^0.2.2"
     }
 }
