--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@vuepic/vue-datepicker": "^11.0.1",
+        "chart.js": "^3.9.1",
         "flowbite": "^2.3.0",
         "sweetalert2": "^11.15.10",
         "vue3-toastify": "^0.2.2"
