--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.7.2",
+    "chart.js": "^3.9.1",
+    "dayjs": "^1.11.13",
     "vue": "^3.4.21",
+    "vue-chart-3": "^3.1.8",
+    "vue-datepicker-next": "^1.0.3",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
   },
