--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
         "tailwindcss": "^3.2.1",
-        "vite": "^5.0",
+        "vite": "^6.1.1",
         "vue": "^3.4.0"
     },
     "dependencies": {
         "@vuepic/vue-datepicker": "^11.0.1",
+        "@vueuse/core": "^12.7.0",
         "chart.js": "^3.9.1",
         "flowbite": "^2.3.0",
         "sweetalert2": "^11.15.10",
