--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tiptap/pm": "^2.11.5",
+    "@tiptap/starter-kit": "^2.11.5",
+    "@tiptap/vue-3": "^2.11.5",
     "@vuepic/vue-datepicker": "^11.0.1",
     "axios": "^1.7.2",
     "chart.js": "^3.9.1",
