--- a/package.json
+++ b/package.json
@@ -20,6 +20,22 @@
         "vue": "^3.4.0"
     },
     "dependencies": {
+        "@tiptap/extension-blockquote": "^2.11.5",
+        "@tiptap/extension-bold": "^2.11.5",
+        "@tiptap/extension-bullet-list": "^2.11.5",
+        "@tiptap/extension-heading": "^2.11.5",
+        "@tiptap/extension-image": "^2.11.5",
+        "@tiptap/extension-italic": "^2.11.5",
+        "@tiptap/extension-link": "^2.11.5",
+        "@tiptap/extension-ordered-list": "^2.11.5",
+        "@tiptap/extension-table": "^2.11.5",
+        "@tiptap/extension-table-cell": "^2.11.5",
+        "@tiptap/extension-table-header": "^2.11.5",
+        "@tiptap/extension-table-row": "^2.11.5",
+        "@tiptap/extension-text-align": "^2.11.5",
+        "@tiptap/extension-underline": "^2.11.5",
+        "@tiptap/starter-kit": "^2.11.5",
+        "@tiptap/vue-3": "^2.11.5",
         "@vuepic/vue-datepicker": "^11.0.1",
         "@vueuse/core": "^12.7.0",
         "chart.js": "^3.9.1",
